{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 239,
  "lineage": "a01db9aa-39e5-c810-7de0-ee0a22f59f5b",
  "resources": [
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e959b54a92188f49",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-0df9e21268e4c065c",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0df9e21268e4c065c",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "shireen-eng-48-first-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0938d0934d2c33ee1",
            "private_dns": "ip-10-0-0-51.eu-west-1.compute.internal",
            "private_ip": "10.0.0.51",
            "public_ip": "54.77.6.156",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0e59b0a08eedceee3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0185be7bc789ad508",
            "tags": {
              "Name": "Eng48-Shireen-app - app instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0fa4b32de3d586e3c"
            ]
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "module.app.aws_security_group.app_security_group",
            "module.app.aws_subnet.app_subnet",
            "module.db.aws_instance.db_instance",
            "module.db.aws_security_group.db_sg",
            "module.db.aws_subnet.priv_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_instance",
      "name": "db_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0eb937f4c95830907",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-0b992ebf388fd6f26",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0b992ebf388fd6f26",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "shireen-eng-48-first-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0b1424b77151d3d16",
            "private_dns": "ip-10-0-2-136.eu-west-1.compute.internal",
            "private_ip": "10.0.2.136",
            "public_ip": "34.244.28.183",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-04f7afbfca5948c54",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ec8d535eec1970af",
            "tags": {
              "Name": "Eng48-Shireen-db - db instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07d1bfdcef2aa3fbe"
            ]
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "module.app.aws_security_group.app_security_group",
            "module.db.aws_security_group.db_sg",
            "module.db.aws_subnet.priv_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "app_gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-08ae54bc6f3015385",
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng48-Shireen-app - igw"
            },
            "vpc_id": "vpc-03047c313822a170f"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0428c7ada2a848d9d",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08ae54bc6f3015385",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Eng48-Shireen-app - route"
            },
            "vpc_id": "vpc-03047c313822a170f"
          },
          "dependencies": [
            "aws_internet_gateway.app_gw",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e8ceb723e6896adc",
            "route_table_id": "rtb-0428c7ada2a848d9d",
            "subnet_id": "subnet-0185be7bc789ad508"
          },
          "dependencies": [
            "aws_internet_gateway.app_gw",
            "aws_vpc.app_vpc",
            "module.app.aws_route_table.app_route_table",
            "module.app.aws_subnet.app_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-0fa4b32de3d586e3c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fa4b32de3d586e3c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20200131121043140600000001",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Eng48-Shireen-app - sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03047c313822a170f"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-07d1bfdcef2aa3fbe",
            "description": "Allow traffic from app",
            "egress": [],
            "id": "sg-07d1bfdcef2aa3fbe",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fa4b32de3d586e3c"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fa4b32de3d586e3c"
                ],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "Eng48-Shireen-db",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Eng48-Shireen-db - db_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03047c313822a170f"
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "module.app.aws_security_group.app_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-0185be7bc789ad508",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0185be7bc789ad508",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng48-Shireen-app - subnet"
            },
            "vpc_id": "vpc-03047c313822a170f"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-0ec8d535eec1970af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0ec8d535eec1970af",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng48-Shireen-db - private subnet"
            },
            "vpc_id": "vpc-03047c313822a170f"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:vpc/vpc-03047c313822a170f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ae77914ef1ad3fb0",
            "default_route_table_id": "rtb-0c22d7d94243c8898",
            "default_security_group_id": "sg-0970945c92dee2447",
            "dhcp_options_id": "dopt-18d5d77d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-03047c313822a170f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c22d7d94243c8898",
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng48-Shireen-app - VPC"
            }
          }
        }
      ]
    }
  ]
}